Fixed a bug that didn't send jwt in post request.